fix: demo menu overflow

--- a/src/slots/ExampleSider/index.module.less
+++ b/src/slots/ExampleSider/index.module.less
@@ -3,7 +3,7 @@
 .shadowWrapper {
   position: relative;
   margin-bottom: 12px;
-  overflow: auto;
+  overflow: unset;
   height: 100%;
 
   &::before,
